# odsperf-demo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
docs/: adding-metrics.md  api-reference.md  grafana-dashboard.md  hot-document-test.md  mock-data-generator.md  schema-account-transaction.md
infra/: Makefile  namespaces.yaml
infra/istio/: gateway.yaml  httproute.yaml  reference-grants.yaml
infra/mongodb/: init-schema-accounts.js  init-schema.js  values.yaml
infra/monitoring/: destination-rule.yaml  kube-prometheus-values.yaml  namespace-mtls-disable.yaml  peer-authentication.yaml
infra/monitoring/dashboards/: ods-service-dashboard-configmap.yaml  ods-service-dashboard.json
infra/ods-service/: deployment.yaml  peer-authentication.yaml  service.yaml  servicemonitor.yaml
infra/postgresql/: init-schema-accounts.sql  init-schema.sql  values.yaml
scripts/: check-metrics.sh  compare-disk-usage.sh  deploy-ods.sh  generate-mock-data-mongo.sh  generate-mock-data.sh  init-mongo-indexes.sh  init-pg-accounts.sh  init-pg-schema.sh  populate-final-statements.sh  seed.sh  test-api.sh  test-hot-document.sh  update-dashboard-configmap.sh
src/: config.rs  error.rs  main.rs  metrics_collector.rs  models.rs  state.rs
src/db/: mongodb.rs  postgres.rs
src/handlers/: health.rs  mod.rs  mongo.rs  mongo_nojoin.rs  pg.rs  pg_join.rs
