[package]
name    = "odsperf-demo"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "odsperf-demo"
path = "src/main.rs"

[[bin]]
name = "generate_csv"
path = "src/bin/generate_csv.rs"

[[bin]]
name = "load_pg"
path = "src/bin/load_pg.rs"

[[bin]]
name = "load_mongo"
path = "src/bin/load_mongo.rs"

# ── Legacy (kept for reference, superseded by generate_csv + load_pg/load_mongo) ──
[[bin]]
name = "generate_mock_data"
path = "src/bin/generate_mock_data.rs"

[[bin]]
name = "generate_mock_data_mongo"
path = "src/bin/generate_mock_data_mongo.rs"

[dependencies]
# ── Web framework ──────────────────────────────────────────────────────────
axum              = { version = "0.7",  features = ["macros"] }
tokio             = { version = "1",    features = ["full"] }
tower             = "0.4"
tower-http        = { version = "0.5",  features = ["trace", "request-id", "cors", "timeout"] }

# ── Database ───────────────────────────────────────────────────────────────
sqlx              = { version = "0.8",  features = ["postgres", "runtime-tokio", "chrono", "rust_decimal"] }
mongodb           = "3"
bson              = { version = "2",    features = ["chrono-0_4"] }
futures-util      = "0.3"

# ── Serialization ──────────────────────────────────────────────────────────
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"

# ── Date / Decimal ─────────────────────────────────────────────────────────
chrono            = { version = "0.4",  features = ["serde"] }
rust_decimal      = { version = "1",    features = ["serde"] }

# ── Structured logging ─────────────────────────────────────────────────────
tracing                = "0.1"
tracing-subscriber     = { version = "0.3", features = ["env-filter", "json"] }

# ── Metrics ────────────────────────────────────────────────────────────────
metrics                     = "0.22"   # must match version used by metrics-exporter-prometheus
metrics-exporter-prometheus = "0.13"   # pulls metrics 0.22 — same registry, recorder works

# ── Error handling ─────────────────────────────────────────────────────────
thiserror = "1"
anyhow    = "1"

# ── Utilities ──────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
csv  = "1"

# ── Release Profile Optimization ──────────────────────────────────────────
[profile.release]
strip = true          # Strip debug symbols (reduces binary size by ~50-70%)
lto = true            # Link-Time Optimization (smaller + faster)
codegen-units = 1     # Better optimization (slower compile, smaller binary)
opt-level = "z"       # Optimize for size (alternative: "s" or 3 for speed)
